# OESP

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.trae/documents/: oesp-architecture-v1.md  oesp-prd-v1.md
oesp-sdk/: PUBLISHING.md  README.md  oesp-all-1.0.0.tgz  oesp-core-1.0.0.tgz  oesp-crypto-sodium-1.0.0.tgz  oesp-keystore-node-1.0.0.tgz  oesp-sdk-0.1.0.tgz  oesp-storage-memory-1.0.0.tgz  oesp-sync-http-1.0.0.tgz  oesp-transport-ble-gatt-1.0.0.tgz  package-lock.json  package.json  pnpm-lock.yaml
oesp-sdk/.changeset/: config.json  tricky-vans-begin.md  wicked-snakes-feel.md
oesp-ts/: README.md  package-lock.json  package.json  tsconfig.base.json
oesp-ts-test-app/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
oesp-ts-test-app/src/: App.tsx
oesp-ts-test-app/src/lib/: oesp.ts
oesp-ts-test-app/src/pages/: BLEConnection.tsx  DataTransfer.tsx  Home.tsx  PackageDecoding.tsx  PackageEncoding.tsx  SyncConnection.tsx
oesp-ts-test-app/src/store/: useOespStore.ts
oesp-ts/examples/browser-demo/: index.html
oesp-ts/examples/node-demo/: package.json
oesp-ts/examples/react-native-demo/: README.md
oesp_sdk_python/: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
oesp_sdk_python/oesp_sdk/: __init__.py
oesp_sdk_python/oesp_sdk/client/: __init__.py  adapters.py  client.py  keystore.py
oesp_sdk_python/oesp_sdk/core/: __init__.py  b64url.py  canonical.py  did.py  envelope.py  errors.py  types.py
oesp_sdk_python/oesp_sdk/crypto/: __init__.py  aead.py  ed25519.py  rng.py  x25519.py
oesp_sdk_python/oesp_sdk/server/: __init__.py  hooks.py  policies.py  replay.py  verifier.py
oesp_sdk_python/oesp_sdk/sync/: __init__.py  client.py  env.py
oesp_sdk_python/oesp_sdk/transport/: __init__.py  bleak_link.py  frames.py  link.py  transport.py
oesp_sdk_python/tests/: test_client_roundtrip.py  test_server_verify.py  test_transport.py  test_vectors.py  vectors.json
oesp_sdk_ts/: .gitignore  README.md  jest.config.cjs  package.json  tsconfig.json
oesp_sdk_ts/src/: b64url.ts  canon.ts  canonical.ts  client.ts  crypto.ts  did.ts  errors.ts  index.ts  sync.ts  types-sodium.d.ts  types.ts
oesp_sdk_ts/src/adapters/: keystore-rn.ts  keystore.ts  resolver-memory.ts  resolver.ts  storage-sqlite.ts  storage.ts
oesp_sdk_ts/src/transport/: ble.ts  types.ts
oesp_sdk_ts/tests/: canon.test.js  client.jest.test.js  client.stubs.test.js  types.test.js  vectors.json
oesp_sync_server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
oesp_sync_server/app/: db.py  main.py  settings.py
oesp_sync_server/app/middlewares/: auth.py
oesp_sync_server/app/models/: models.py
oesp_sync_server/app/routes/: sync.py
oesp_sync_server/app/schemas/: schemas.py
oesp_sync_server/app/services/: hash_stream.py  sync_service.py
oesp_sync_server/app/utils/: jsonl_stream.py
oesp_sync_server/migrations/: env.py
oesp_sync_server/tests/: conftest.py  test_sync.py
(+2 files in other folders)
