[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oesp-sdk"
version = "0.2.3"
description = "Offline Exchange Secure Protocol (OESP) SDK for Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "OESP Team", email = "dev@oesp.protocol" }
]
keywords = ["oesp", "crypto", "offline", "exchange", "protocol", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "PyNaCl>=1.5.0",
    "cryptography>=43.0.0",
    "bleak>=0.21.0",
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://oesp.protocol"
Repository = "https://github.com/Domtry/OESP"
Documentation = "https://docs.oesp.protocol"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["oesp_sdk"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.venv*",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
