[project]
name = "oesp-sync-server"
version = "0.1.0"
description = "OESP Synchronization Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
